stack/jackett/deployment-jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      nodeSelector:
        dfl.mn/datacentre: mission
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          ports:
          - containerPort: 9117
          volumeMounts:
          - mountPath: /config
            name: antfarm
      volumes:
        - name: antfarm
          persistentVolumeClaim:
            claimName: pvc-localfs-jackett
