stack/jackett/ingress-jackett.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jackett
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'i.dfl.mn auth required'
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: issuer-cert-manager-production
    certmanager.k8s.io/cluster-issuer: issuer-cert-manager-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jackett.i.dfl.mn
    secretName: cert-jackett
  rules:
  - host: jackett.i.dfl.mn
    http:
      paths:
      - path: /
        backend:
          serviceName: jackett
          servicePort: 9117
